--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 after_script:
 - cd ./public
 - ls
-- scp -P 29797 ./* root@joeycaa.xya:/joey/front/blog
+- scp -P 29797 ./* root@joeycaa.xyz:/joey/front/blog
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0b39623767b_key -iv $encrypted_b0b39623767b_iv
   -in id_rsa.enc -out id_rsa -d
