--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_script:
 script:
 - hexo g
 addons:
-  ssh_known_hosts: joeycaa.xyz:29797
+  ssh_known_hosts: 104.224.131.116:29797
 after_script:
 - cd ./public
 - ls
-- scp -P 29797 ./* root@joeycaa.xyz:/joey/front/blog
+- scp -P 29797 ./* root@104.224.131.116:/joey/front/blog
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0b39623767b_key -iv $encrypted_b0b39623767b_iv
   -in id_rsa.enc -out id_rsa -d
