--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ after_script:
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0b39623767b_key -iv $encrypted_b0b39623767b_iv
   -in id_rsa.enc -out id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
