--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ after_script:
 - scp -P 29797 ./public root@104.224.131.116:/joey/front/blog
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0b39623767b_key -iv $encrypted_b0b39623767b_iv
-  -in id_rsa.enc -out id_rsa -d
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
