--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ script:
 addons:
   ssh_known_hosts: 104.224.131.116:29797
 after_script:
-- ls
-- scp -r -P 29797 ./public root@104.224.131.116:/joey/front/blog
+- ssh root@104.224.131.116 "/joey/front/script/blogClean.sh"
+- scp -r -P 29797 ./public/ root@104.224.131.116:/joey/front/blog
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0b39623767b_key -iv $encrypted_b0b39623767b_iv
   -in travis.enc -out ~/.ssh/id_rsa -d
